[package]
name = "graphics"
version = "0.3.0"
authors = ["David O'Connor <the_alchemist@fastmail.com>"]
edition = "2021"
keywords = [ "graphics", "engine" ]
categories = [
    "rendering",
    "graphics",
]


[dependencies]
wgpu = "^22.1.0"
lin-alg = { package = "lin-alg2", version = "^1.0", features = ["computer_graphics"] }
#lin-alg = { package = "lin-alg2", path = "../lin_alg", features = ["computer_graphics"] }

pollster = "^0.4.0"  # For 2 WGPU init fns that use async.

image = "^0.25.2" # For loading textures
obj = "^0.10.2"  # For loading OBJ meshes.

winit = "^0.30.5"
egui = "^0.29.1"
egui-wgpu = "^0.29.1"
egui-winit = "^0.29.1"


